--- a/css/searchBox.css
+++ b/css/searchBox.css
@@ -9,7 +9,7 @@ body {
 font-family: Arial, Helvetica, sans-serif;
 }
 
-div.searchbox {
+.searchbox {
   background-color : rgb(7, 7, 7);
   color : lightgray;
   padding-top: 2px;
