--- a/css/searchBox.css
+++ b/css/searchBox.css
@@ -1,26 +1,5 @@
-p.main {
-  width: 100px;
-  height: 100px;
-  transform-origin: center;
-  background-color: blue;
-}
-
 body {
 font-family: Arial, Helvetica, sans-serif;
-}
-
-.searchbox {
-  background-color : rgb(7, 7, 7);
-  color : lightgray;
-  padding-top: 2px;
-  padding-bottom: 4px;
-  border-radius: 10px;
-  width : 300px;
-  z-index: 1000;
-}
-
-#searchWrapper{
-  padding-left : 50px;
 }
 
 #NodeList {
@@ -39,14 +18,7 @@ li.Node{
   border-radius: 10px;
 }
 
-h1 {
-  text-align: center;
-}
-
-a {
-  color : white;
-}
-
-a:hover {
-  color : gray;
+.searchbox{
+  width:200px;
+  height: auto;
 }
