--- a/presentation/Tinned.css
+++ b/presentation/Tinned.css
@@ -126,17 +126,17 @@ body {
   padding-bottom:50px;
 }
 
-.global>a{
+.global a{
   color :black;
   text-decoration:none
 }
 
-.global>a:hover{
+.global a:hover{
   color :black;
   text-decoration:none
 }
 
-.global>a:visited{
+.global a:visited{
   color :black;
   text-decoration:none
 }
